[package]
name = "rust_100knocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.25.1", features=["describe", "lazy", "strings","dtype-categorical","list_eval","rows", "rank"] }